# base-blog

./: .gitignore  README.md  db.sqlite3  pyproject.toml
base/: settings.py  urls.py
feed/: admin.py  forms.py  models.py  urls.py  views.py
feed/migrations/: 0001_initial.py  0002_account_comment.py  0002_remove_postmodel_slug_postmodel_liked_like.py  0003_comment_liked.py  0004_postmodel_favourites.py  0005_rename_comment_commentmodel.py  0006_remove_postmodel_liked.py  0007_commentmodel_unlike.py
feed/templates/: main.html
feed/templates/feed/: comment.html  comments.html  favorites_list.html  feed.html  inspect.html  more.html  spair.html
functions/templates/functions/: comment_navbar.html  more_navbar.html  navbar.html
users/: forms.py  urls.py  views.py
users/templates/users/: login.html  register.html
